tests/tools/typecheck/positive/while_assignment.nv
fn main() : void {
    let i : int = 0;
    while (i < 3) {
        i = i + 1;
    }
    print_int(i);
    return;
}
