tests/tools/typecheck/negative/vec_new_without_expected_type.nv
fn main() : void {
    vec_new();
    return;
}
